mistake in spelling fixed for team.html

--- a/output/team.html
+++ b/output/team.html
@@ -47,7 +47,7 @@
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 2</li>
-            <li class="list-group-item">Email: <a href="mailto:mark@example.com">mark@example.com</a></li>
+            <li class="list-group-item">Email: <a href="mailto:mark@examle.com">mark@examle.com</a></li>
             <li class="list-group-item">GitHub: <a href="https://github.com/mark123" target="_blank" rel="noopener noreferrer">mark123</a></li>
         </ul>
     </div>
@@ -55,14 +55,14 @@
         
         <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Sal</h2>
+        <h2 class="card-title">Lily</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 3</li>
-            <li class="list-group-item">Email: <a href="mailto:sal@example.com">sal@example.com</a></li>
-            <li class="list-group-item">School: example school</li>
+            <li class="list-group-item">Email: <a href="mailto:lily@example.com">lily@example.com</a></li>
+            <li class="list-group-item">School: examle school</li>
         </ul>
     </div>
 </div>
